<resources>
    <!--    <string name="app_name">Draw Sonic</string>-->
    <!--    <string name="app_title" translatable="false">Sonic</string>-->
<!--    <string name="lets_draw_and_have_fun">Let\'s Draw\nAnd\nHave Fun</string>-->

    <string name="app_name">Let\'s draw Sonic</string>
    <string name="app_title" translatable="false">Draw Sonic</string>
    <string name="lets_draw_and_have_fun">Let\'s draw Sonic</string>

    <string name="pref_device_token" translatable="false">pref_device_token</string>
    <string name="extra_device_token" translatable="false">extra_device_token</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="prosto_notification_channel_id" translatable="false">prosto_notification_channel_id</string>
    <string name="firebase_message">Push Notification Message</string>

    <string name="title_themes">Main</string>
    <string name="all_lessons">Load all Lessons</string>
    <string name="rate_us">Rate us</string>
    <string name="write_to_us">Send feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="all_apps">All Apps</string>

    <string name="steps">Steps:</string>
    <string name="feedback">Feedback</string>
    <string name="choose_email_client">Choose the email client</string>

    <string name="alert_rate_us">Please rate us on Google Play!</string>
    <string name="alert_rate_us_later">Please rate us later by choosing menu "Rate Us" on the left menu!</string>

    <string name="next_lesson">Next Lesson</string>
    <string name="more_apps">More Apps</string>
    <string name="loading">Loading…</string>

    <string name="theme">Theme</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="url_google_play" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <string name="action_start">START</string>

</resources>